--- a/lang/en.json
+++ b/lang/en.json
@@ -1369,7 +1369,11 @@
     "How to work on the services ?":"How to work on the services ?",
     "Subscribe Now":"Subscribe Now",
     "You can try send bulk messages by registration for FREE":"You can try send bulk messages by registration for FREE",
-    "Work With Us":"Work With Us"
+    "Work With Us":"Work With Us",
+    "Have a ideas ? let’s Work Together":"Have a ideas ? let’s Work Together",
+    "Describe your idea":"Describe your idea",
+    "Jeddah , Saudi Arabia":"Jeddah , Saudi Arabia"
+
 
   
 }
