--- a/lang/en.json
+++ b/lang/en.json
@@ -1372,7 +1372,8 @@
     "Work With Us":"Work With Us",
     "Have a ideas ? let’s Work Together":"Have a ideas ? let’s Work Together",
     "Describe your idea":"Describe your idea",
-    "Jeddah , Saudi Arabia":"Jeddah , Saudi Arabia"
+    "Jeddah , Saudi Arabia":"Jeddah , Saudi Arabia",
+    "Subsribe Now ":"Subsribe Now "
 
 
   
