--- a/lang/en.json
+++ b/lang/en.json
@@ -1373,7 +1373,10 @@
     "Have a ideas ? let’s Work Together":"Have a ideas ? let’s Work Together",
     "Describe your idea":"Describe your idea",
     "Jeddah , Saudi Arabia":"Jeddah , Saudi Arabia",
-    "Subsribe Now ":"Subsribe Now "
+    "Subsribe Now ":"Subsribe Now ",
+    "Plan Business Size":"Plan Business Size",
+    "Plan Description":"Plan Description",
+    "Plan Icon":"Plan Icon"
 
 
   
