--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1384,5 +1384,11 @@
   "You can try send bulk messages by registration for FREE":"يمكنك تجربة إرسال الرسائل بالجملة عن طريق التسجيل مجانًا",
   "Plan Business Size":"حجم عمل الخطة",
   "Plan Description":"وصف الخطة",
-  "Plan Icon":"أيقونة الخطة"
+  "Plan Icon":"أيقونة الخطة",
+  "Pricing Plans Title":"خطط الاسعار",
+  "Pricing Plans Description":"اشترك الآن في خططنا المختلفة التي تناسب جميع أحجام الأعمال واستمتع بميزاتنا الرائعة.",
+  "(No extra fees, cancel anytime).":"(لا يوجد رسوم اضافية، يمكنك الغاءه في اي وقت).",
+  "What’s included":"ماذا تشمل"
+
+
 }
