--- a/lang/en.json
+++ b/lang/en.json
@@ -1376,7 +1376,11 @@
     "Subsribe Now ":"Subsribe Now ",
     "Plan Business Size":"Plan Business Size",
     "Plan Description":"Plan Description",
-    "Plan Icon":"Plan Icon"
+    "Plan Icon":"Plan Icon",
+    "Pricing Plans Title":"Pricing Plans",
+    "Pricing Plans Description":"Subscribe now with our different plans that suits all business sizes and enjoy our amazing features .",
+    "(No extra fees, cancel anytime).":"(No extra fees, cancel anytime).",
+    "What’s included":"What’s included"
 
 
   
