--- a/lang/ar.json
+++ b/lang/ar.json
@@ -132,7 +132,7 @@
   "Dashboard": "Dashboard",
   "faq_description": "End-to-end payments and financial management in a single solution. Meet the right platform to help realize.",
   "Home": "Home",
-  "About us": "About us",
+  "About us": "عنا",
   "About Company": "About Company",
   "Do you have more questions?": "Do you have more questions?",
   "Shoot a Direct Mail": "Shoot a Direct Mail",
@@ -146,7 +146,7 @@
   "Have a query?": "Have a query?",
   "Frequently asked questions": "Frequently asked questions",
   "Pricing Plan": "Pricing Plan",
-  "Pricing": "Pricing",
+  "Pricing": "الاسعار",
   "*We help companies of all sizes": "*We help companies of all sizes",
   "Pricing to suite all size of business": "Pricing to suite all size of business",
   "Register with": "Register with",
@@ -414,8 +414,8 @@
   "Partners": "Partners",
   "Team": "Team",
   "Testimonials": "Testimonials",
-  "Features": "Features",
-  "Faq": "Faq",
+  "Features": "المميزات",
+  "Faq": "الأسئلة المتكررة",
   "Tags": "Tags",
   "Category": "Category",
   "Blogs": "Blogs",
@@ -1312,7 +1312,7 @@
   "Recent Post": "Recent Post",
   "Tag": "Tag",
   "Blog Details": "Blog Details",
-  "News": "News",
+  "News": "المساعدة",
   "FAQ": "FAQ",
   "Services": "Services",
   "linkedin": "linkedin",
@@ -1363,32 +1363,53 @@
   "[:ucfirst] Subscription renewal alert": "[:ucfirst] Subscription renewal alert",
   "Your a schedule was removed by admin": "Your a schedule was removed by admin",
   "Your a template was removed by admin": "Your a template was removed by admin",
-  "Plan Starter" :"Starter",
-  "Plan Enterprise" :"Enterprise",
-  "Plan Basic" : "Basic",
-  "Plan Avnology" : "Avnology",
+  "Plan Starter": "Starter",
+  "Plan Enterprise": "Enterprise",
+  "Plan Basic": "Basic",
+  "Plan Avnology": "Avnology",
   "unlimited": "unlimited",
   "messages_limit": "messages_limit",
   "contact_limit": "contact_limit",
-  "device_limit" : "device_limit",
-  "template_limit" : "template_limit",
-  "apps_limit" : "apps_limit",
-  "chatbot" : "chatbot",
-  "bulk_message" : "bulk_message",
-  "schedule_message" : "schedule_message",
-  "access_chat_list" : "access_chat_list",
-  "access_group_list" : "access_group_list",
-  "SAR" : "SAR",
-  "/month" : "/month",
-  "/year" : "/year",
-  "You can try send bulk messages by registration for FREE":"يمكنك تجربة إرسال الرسائل بالجملة عن طريق التسجيل مجانًا",
-  "Plan Business Size":"حجم عمل الخطة",
-  "Plan Description":"وصف الخطة",
-  "Plan Icon":"أيقونة الخطة",
-  "Pricing Plans Title":"خطط الاسعار",
-  "Pricing Plans Description":"اشترك الآن في خططنا المختلفة التي تناسب جميع أحجام الأعمال واستمتع بميزاتنا الرائعة.",
-  "(No extra fees, cancel anytime).":"(لا يوجد رسوم اضافية، يمكنك الغاءه في اي وقت).",
-  "What’s included":"ماذا تشمل"
+  "device_limit": "device_limit",
+  "template_limit": "template_limit",
+  "apps_limit": "apps_limit",
+  "chatbot": "chatbot",
+  "bulk_message": "bulk_message",
+  "schedule_message": "schedule_message",
+  "access_chat_list": "access_chat_list",
+  "access_group_list": "access_group_list",
+  "SAR": "SAR",
+  "/month": "/month",
+  "/year": "/year",
+  "You can try send bulk messages by registration for FREE": "يمكنك تجربة إرسال الرسائل بالجملة عن طريق التسجيل مجانًا",
+  "Plan Business Size": "حجم عمل الخطة",
+  "Plan Description": "وصف الخطة",
+  "Plan Icon": "أيقونة الخطة",
+  "Pricing Plans Title": "أسعار الاشتراك",
+  "Pricing Plans Description": "اشترك الان بباقاتنا المختلفة التي تناسب جميع أنواع شركات الاعمال والاستمتاع بمميزاتنا المدهشة",
+  "(No extra fees, cancel anytime).": "(لا يوجد رسوم اضافية، يمكنك الغاءه في اي وقت).",
+  "What’s included": "يضمن",
+  "Home Title": "ساعد تسويقك مع برامج AVSENDER <br> على الواتساب",
+  "Home Description": "استهدف جمهور اكبر يساعد مشروعك على النجاح",
+  "Work With Us": "جرب الان",
+  "Feature Title": "المميزات",
+  "Feature Description": "  يعد افسيندير وسيلة فعالة لتعزيز دعم العملاء وأداء شركتك ",
+  "WhatsApp Chatbot Title": "الرد الآلي عن طريق الواتساب (Chat bot)",
+  "WhatsApp Chatbot Description": "الرد الالي عبر الواتساب للرد على الرسائل تلقائياً. يقوم بتحليل الرسائل الواردة ويقدم ردوداً مناسب، مما يساعد الشركات في التواصل مع العملاء بشكل سريع وفعال. يُستخدم للإجابة على الأسئلة الشائعة وتقديم المعلومات، مما يسهل عملية الدعم والخدمة.",
+  "Lets Create WhatsApp Bot": "يتيح لك إنشاء WhatsApp Bot",
+  "AVSender for the WhatsApp ultimate marketing tool !": "AVSender لتطبيق WhatsApp النهائي ,أداة تسويق !",
+  "AVSender for the WhatsApp ultimate marketing tool Desc": "يمكن لروبوت WhatsApp العمل على مدار الساعة ويمكنه التعامل مع طلبات متعددة في وقت واحد، مما يعني أنه متاح دائمًا لمساعدة العملاء، حتى خارج ساعات العمل العادية.",
+  "Start Using Avsender": "البدء في استخدام Avsender",
+  "Direct activation":"التنشيط المباشر",
+  "Direct activation Description":"بعد الدفع، سيتم تفعيل المنصة فوراً للعملاء مما سيمنح لهم الاستفادة من الخدمات التي يقدمها Avnology Sender.",
+  "Facing any problem & can’t find solution ?":"تواجه أي مشكلة ولا تجد الحل؟",
+  "Facing any problem & can’t find solution Description":"خدمة العملاء متاحة 24/7 ويمكنكم ارسال على بريدنا الالكتروني avsender@avnology.com",
+  "Active Users":" المستخدمين الفعالين",
+  "Positive Reviews":" تقييمات إيجابية ",
+  "Total Customers":"عميل",
+  "Our Top Integrations":"افضل التكاملات",
+  "Home":"الصفحة الرئيسية"
+  
 
 
 }
