--- a/lang/en.json
+++ b/lang/en.json
@@ -1312,7 +1312,7 @@
     "Recent Post": "Recent Post",
     "Tag": "Tag",
     "Blog Details": "Blog Details",
-    "News": "News",
+    "News": "Help",
     "FAQ": "FAQ",
     "Services": "Services",
     "linkedin": "linkedin",
@@ -1380,7 +1380,27 @@
     "Pricing Plans Title":"Pricing Plans",
     "Pricing Plans Description":"Subscribe now with our different plans that suits all business sizes and enjoy our amazing features .",
     "(No extra fees, cancel anytime).":"(No extra fees, cancel anytime).",
-    "What’s included":"What’s included"
+    "What’s included":"What’s included",
+    "Home Title":"Boost your marketing with <br> AVSENDER on WhatsApp !",
+    "Home Description":"Reach and engage your target audience more effectively",
+    "Feature Title":"Our Features",
+    "Feature Description":"Avsender is an efficient and effective way to boost customer support and boost your company's performance.",
+    "WhatsApp Chatbot Title":"WhatsApp Chatbot",
+    "WhatsApp Chatbot Description":"The WhatsApp bot can work around the clock and can handle multiple requests at once, which means it is always available to help customers, even outside normal business hours.",
+    "Lets Create WhatsApp Bot":"Lets Create WhatsApp Bot",
+    "AVSender for the WhatsApp ultimate marketing tool !":"AVSender for the WhatsApp ultimate marketing tool !",
+    "AVSender for the WhatsApp ultimate marketing tool Desc":"The WhatsApp bot can work around the clock and can  handle multiple requests at once, which means it is always available to help customers,  even outside normal business hours.",
+    "Start Using Avsender":"Start Using Avsender",
+    "Direct activation":"Direct activation",
+    "Direct activation Description":"After payment, the platform will be activated immediately for customers, allowing them to benefit from the services provided by Avnology Sender.",
+    "Facing any problem & can’t find solution ?":"Facing any problem & can’t find solution ?",
+   "Facing any problem & can’t find solution Description":"Customer service is available 24/7. You can send an email to avsender@avnology.com.",
+   "Active Users":"Active Users",
+   "Positive Reviews":"Positive Reviews",
+   "Total Customers":"Total Customers",
+   "Our Top Integrations":"Our Top Integrations",
+   "Home":"Home"
+
 
 
   
