--- a/lang/ar.json
+++ b/lang/ar.json
@@ -440,7 +440,7 @@
   "Forgot password?": "Forgot password?",
   "Remember me": "Remember me",
   "Login your Account": "Login your Account",
-  "Login": "Login",
+  "Login": "تسجيل الدخول",
   "click here to request another": "click here to request another",
   "If you did not receive the email": "If you did not receive the email",
   "Before proceeding, please check your email for a verification link.": "Before proceeding, please check your email for a verification link.",
@@ -809,6 +809,7 @@
   "Showing": "Showing",
   "Go to page :page": "Go to page :page",
   "Will Expire": "Will Expire",
+  
   "Order Date": "Order Date",
   "Status": "Status",
   "Amount": "Amount",
@@ -817,7 +818,7 @@
   "Order No": "Order No",
   "!Oops You Have Not Created Any Order Now": "!Oops You Have Not Created Any Order Now",
   "Subscription Plan": "Subscription Plan",
-  "Subscribe": "Subscribe",
+  "Subscribe": "الاشتراك",
   "Activated": "Activated",
   "Subscriptions History": "Subscriptions History",
   "Total Amount": "Total Amount",
