steps of create acc

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -377,13 +377,14 @@
   "About Us Section": "About Us Section",
   "Counter Area Section": "Counter Area Section",
   "Enter Name": "Enter Name",
-  "Name": "Name",
-  "Email": "Email",
+  "Name": " الاسم ",
+  "Email": "البريد إلكتروني",
+  "Password":" كلمة المرور ",
   "Enter Email": "Enter Email",
   "Enter password": "Enter password",
   "Confirm Password": "Confirm Password",
   "Assign Roles": "Assign Roles",
-  "Save": "Save",
+  "Save": "حفظ",
   "Create admin": "Create admin",
   "Back": "Back",
   "Create Admin": "Create Admin",
@@ -438,7 +439,7 @@
   "Dont have an account?": "Dont have an account?",
   "Sign In": "Sign In",
   "Forgot password?": "Forgot password?",
-  "Remember me": "Remember me",
+  "Remember me": " تذكرني ",
   "Login your Account": "Login your Account",
   "Login": "تسجيل الدخول",
   "click here to request another": "click here to request another",
@@ -1414,7 +1415,24 @@
   "Popular":"شائع",
   "Browse other services of AVSENDER":"تصفح الخدمات الأخرى لـ AVSENDER",
   "Subscribe Now":"اشترك الآن",
-   "How to work on the services":"كيف يمكنك العمل على الخدمات؟"
+   "How to work on the services":"كيف يمكنك العمل على الخدمات؟",
+   "Contact":"اتصل",
+   "Monthly Plan":"الخطة الشهرية",
+   "Annual Plan":"الخطة السنوية",
+   "Billing every Year":"الدفع كل سنة ",
+   "Billing every Month":"الدفع كل شهر ",
+   "Save":"وفر",
+   "Package Selection":"اختيار الباقة",
+   "Plan Selection":"اختيار خطة الدفع",
+   "Create account":"إنشاء حساب",
+   "Payment":"الدفع",
+   "Back":"رجوع",
+   "Proceed":"المتابعة",
+   "Register your Account":"انشئ حسابك",
+   "Re-enter Password":" تأكبد كلمة المرور ",
+   "Already have an account":"هل لديك حساب بالفعل ؟",
+    "Last name":" اسم العائلة ",
+   "First name":" الاسم الأول "
 
   
 
