--- a/lang/ar.json
+++ b/lang/ar.json
@@ -27,7 +27,7 @@
   "validation.between.string": "The :attribute field must be between :min and :max characters.",
   "validation.boolean": "The :attribute field must be true or false.",
   "validation.confirmed": "The :attribute field confirmation does not match.",
-  "validation.current_password": "The password is incorrect.",
+  "validation.current_password": "كلمة المرور غير صحيحة",
   "validation.date": "The :attribute field must be a valid date.",
   "validation.date_equals": "The :attribute field must be a date equal to :date.",
   "validation.date_format": "The :attribute field must match the format :format.",
@@ -155,8 +155,8 @@
   "have an account?": "have an account?",
   "Sign in now": "Sign in now",
   "Sign Up": "Sign Up",
-  "Password": "Password",
-  "Email Address": "Email Address",
+  "Password": "كلمة المرور",
+  "Email Address": "البريد الإلكتروني",
   "Your Name": "Your Name",
   "Our Team": "Our Team",
   "Search......": "Search......",
@@ -382,7 +382,7 @@
   "Password":" كلمة المرور ",
   "Enter Email": "Enter Email",
   "Enter password": "Enter password",
-  "Confirm Password": "Confirm Password",
+  "Confirm Password": "إعادة إدخال كلمة المرور الجديدة",
   "Assign Roles": "Assign Roles",
   "Save": "حفظ",
   "Create admin": "Create admin",
@@ -435,10 +435,10 @@
   "Customers": "Customers",
   "Subscriptions": "Subscriptions",
   "Orders": "Orders",
-  "Sign up now": "Sign up now",
-  "Dont have an account?": "Dont have an account?",
-  "Sign In": "Sign In",
-  "Forgot password?": "Forgot password?",
+  "Sign up now": "اشترك الآن",
+  "Dont have an account?": "ليس لديك حساب ؟",
+  "Sign In": "تسجيل الدخول",
+  "Forgot password?": "نسيت كلمة المرور؟",
   "Remember me": " تذكرني ",
   "Login your Account": "Login your Account",
   "Login": "تسجيل الدخول",
@@ -447,7 +447,7 @@
   "Before proceeding, please check your email for a verification link.": "Before proceeding, please check your email for a verification link.",
   "A fresh verification link has been sent to your email address.": "A fresh verification link has been sent to your email address.",
   "Verify Your Email Address": "Verify Your Email Address",
-  "Reset Password": "Reset Password",
+  "Reset Password": " إعادة تعيين كلمة المرور",
   "Send Password Reset Link": "Send Password Reset Link",
   "Forgot Your Password?": "Forgot Your Password?",
   "Please confirm your password before continuing.": "Please confirm your password before continuing.",
@@ -1309,13 +1309,13 @@
   "Search Here": "Search Here",
   "Oops there is no blog post available": "Oops there is no blog post available",
   "READ MORE": "قراءة المزيد",
-  "Blog": "Blog",
+  "Blog": "المدونة",
   "Recent Blogs": "Recent Blogs",
   "Recent Post": "Recent Post",
   "Tag": "Tag",
   "Blog Details": "Blog Details",
   "News": "المساعدة",
-  "FAQ": "FAQ",
+  "FAQ": "الأسئلة المتكررة",
   "Services": "Services",
   "linkedin": "linkedin",
   "instagram": "instagram",
@@ -1431,8 +1431,19 @@
    "Register your Account":"انشئ حسابك",
    "Re-enter Password":" تأكبد كلمة المرور ",
    "Already have an account":"هل لديك حساب بالفعل ؟",
-    "Last name":" اسم العائلة ",
-   "First name":" الاسم الأول "
+    "Last name":" اسم العائلة",
+   "First name":" الاسم الأول ",
+   "Let’s Login to your account ":"تسجيل الدخول إلى حسابك ",
+   "Forget password ?":"نسيت كلمة المرور؟",
+   "please enter your E-mail below":"الرجاء إدخال البريد الإلكتروني الخاص بك أدناه",
+   "Change Password":"تغيير كلمة المرور",
+   "Resend email":"إعادة إرسال البريد الإلكتروني",
+   "Didn't receive an Email ?":"لم تتلق بريدا إلكترونيا؟",
+   "Please check the sent email at your inbox to change password ":"يرجى التحقق من البريد الإلكتروني المرسل في صندوق الوارد الخاص بك لتغيير كلمة المرور ",
+   "Subscribe now with our different plans that suits all business sizes and enjoy our amazing features .":"اشترك الآن بخططنا المختلفة التي تناسب جميع أحجام الأعمال وتمتع بمميزاتنا الرائعة.",
+   "Back to top":"العودة إلى الأعلى",
+   "We are here to help you":" نحن هنا لمساعدتك",
+   "Unlock Your Brand’s Potential":"إطلاق العنان لإمكانات علامتك التجارية"
 
   
 
