--- a/lang/en.json
+++ b/lang/en.json
@@ -1420,8 +1420,17 @@
    "Already have an account":  "Already have an account",
    "Password":" Password",
    "Last name":"Last name",
-   "First name":"First name"
-
+   "First name":"First name",
+   "Let’s Login to your account ":"Let’s Login to your account ",
+     "Forget password ?":"Forget password ?",
+     "Change Password":"Change Passwords",
+     "Resend email":"Resend email",
+     "Didn't receive an Email ?":"Didn't receive an Email ?",
+     "Please check the sent email at your inbox to change password ":"Please check the sent email at your inbox to change password ",
+"Subscribe now with our different plans that suits all business sizes and enjoy our amazing features .":"Subscribe now with our different plans that suits all business sizes and enjoy our amazing features .",
+"Back to top":"Back to top",
+"We are here to help you":"We are here to help you",
+"Unlock Your Brand’s Potential":"Unlock Your Brand’s Potential"
 
 
   
