--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1443,7 +1443,9 @@
    "Subscribe now with our different plans that suits all business sizes and enjoy our amazing features .":"اشترك الآن بخططنا المختلفة التي تناسب جميع أحجام الأعمال وتمتع بمميزاتنا الرائعة.",
    "Back to top":"العودة إلى الأعلى",
    "We are here to help you":" نحن هنا لمساعدتك",
-   "Unlock Your Brand’s Potential":"إطلاق العنان لإمكانات علامتك التجارية"
+   "Unlock Your Brand’s Potential":"إطلاق العنان لإمكانات علامتك التجارية",
+   "ALL RIGHTS RESERVED":"جميع الحقوق محفوظة",
+   "Designed by":"صمم بواسطة"
 
   
 
