--- a/lang/en.json
+++ b/lang/en.json
@@ -1430,7 +1430,9 @@
 "Subscribe now with our different plans that suits all business sizes and enjoy our amazing features .":"Subscribe now with our different plans that suits all business sizes and enjoy our amazing features .",
 "Back to top":"Back to top",
 "We are here to help you":"We are here to help you",
-"Unlock Your Brand’s Potential":"Unlock Your Brand’s Potential"
+"Unlock Your Brand’s Potential":"Unlock Your Brand’s Potential",
+"ALL RIGHTS RESERVED":"ALL RIGHTS RESERVED",
+"Designed by":"Designed by"
 
 
   
