--- a/lang/ar.json
+++ b/lang/ar.json
@@ -136,11 +136,11 @@
   "About Company": "About Company",
   "Do you have more questions?": "Do you have more questions?",
   "Shoot a Direct Mail": "Shoot a Direct Mail",
-  "Contact us": "Contact us",
+  "Contact us": "اتصل بنا",
   "Visit Us Daily": "Visit Us Daily",
   "Email Us": "Email Us",
   "Send us a Message": "Send us a Message",
-  "Send Message": "Send Message",
+  "Send Message": "أرسل الطلب",
   "Ask Question": "Ask Question",
   "Need A Support?": "Need A Support?",
   "Have a query?": "Have a query?",
@@ -157,7 +157,7 @@
   "Sign Up": "Sign Up",
   "Password": "كلمة المرور",
   "Email Address": "البريد الإلكتروني",
-  "Your Name": "Your Name",
+  "Your Name": "الاسم",
   "Our Team": "Our Team",
   "Search......": "Search......",
   "Search......2": "Search......",
@@ -386,7 +386,7 @@
   "Assign Roles": "Assign Roles",
   "Save": "حفظ",
   "Create admin": "Create admin",
-  "Back": "Back",
+  "Back": "رجوع",
   "Create Admin": "Create Admin",
   "add admin profile information": "add admin profile information",
   "Edit Admin": "Edit Admin",
@@ -581,7 +581,7 @@
   "Chats": "Chats",
   "Scan": "Scan",
   "Total Messages:": "Total Messages:",
-  "Phone :": "Phone :",
+  "Phone :": "رقم الهاتف :",
   "Inactive Devices": "Inactive Devices",
   "Active Devices": "Active Devices",
   "Device": "Device",
@@ -660,10 +660,10 @@
   "Update Settings": "Update Settings",
   "Avatar": "Avatar",
   "Address (will used for invoice)": "Address (will used for invoice)",
-  "Phone": "Phone",
+  "Phone": "رقم الهاتف",
   "Edit you basic credentials": "Edit you basic credentials",
   "General Settings": "General Settings",
-  "Subject": "Subject",
+  "Subject": "العنوان",
   "Create Ticket": "Create Ticket",
   "Create Support Ticket": "Create Support Ticket",
   "Oops you have not created any support now....": "Oops you have not created any support now....",
@@ -1395,7 +1395,7 @@
   "Home Description": "استهدف جمهور اكبر يساعد مشروعك على النجاح",
   "Work With Us": "جرب الان",
   "Feature Title": "المميزات",
-  "Feature Description": "  يعد افسيندير وسيلة فعالة لتعزيز دعم العملاء وأداء شركتك ",
+  "Feature Description": "يعد Avsender وسيلة فعالة لتعزيز دعم العملاء وأداء شركتك.",
   "WhatsApp Chatbot Title": "الرد الآلي عن طريق الواتساب (Chat bot)",
   "WhatsApp Chatbot Description": "الرد الالي عبر الواتساب للرد على الرسائل تلقائياً. يقوم بتحليل الرسائل الواردة ويقدم ردوداً مناسب، مما يساعد الشركات في التواصل مع العملاء بشكل سريع وفعال. يُستخدم للإجابة على الأسئلة الشائعة وتقديم المعلومات، مما يسهل عملية الدعم والخدمة.",
   "Lets Create WhatsApp Bot": "يتيح لك إنشاء WhatsApp Bot",
@@ -1410,6 +1410,7 @@
   "Positive Reviews":" تقييمات إيجابية ",
   "Total Customers":"عميل",
   "Our Top Integrations":"افضل التكاملات",
+  "ur Top Integrations Description":"يتضمن تكامل ربط التطبيقات، المنصات، أنظمة مثل إدارة علاقات العملاء (CRM) ودعم العملاء، مما يسهل تبادل البيانات، ويساعد الشركات على تبسيط الإجراءات وتعزيز التواصل",
   "Home":"الصفحة الرئيسية",
   "Top Features":"المميزات",
   "Popular":"شائع",
@@ -1421,7 +1422,7 @@
    "Annual Plan":"الخطة السنوية",
    "Billing every Year":"الدفع كل سنة ",
    "Billing every Month":"الدفع كل شهر ",
-   "Save":"وفر",
+   "Save":"حفظ",
    "Package Selection":"اختيار الباقة",
    "Plan Selection":"اختيار خطة الدفع",
    "Create account":"إنشاء حساب",
@@ -1445,7 +1446,12 @@
    "We are here to help you":" نحن هنا لمساعدتك",
    "Unlock Your Brand’s Potential":"إطلاق العنان لإمكانات علامتك التجارية",
    "ALL RIGHTS RESERVED":"جميع الحقوق محفوظة",
-   "Designed by":"صمم بواسطة"
+   "Designed by":"صمم بواسطة",
+   "Save Plan":"وفر",
+   "Choose your payment method to subscribe":"اختر طريقة الدفع :",
+   "Contact us Description":"اشترك الآن بخططنا المختلفة التي تناسب جميع أحجام الأعمال وتمتع بمميزاتنا الرائعة.",
+   "Describe your idea":"وصف فكرتك ",
+   "Have a ideas ? let’s Work Together":"هل لديك أفكار؟ شاركها معنا الأن"
 
   
 
