--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1451,7 +1451,8 @@
    "Choose your payment method to subscribe":"اختر طريقة الدفع :",
    "Contact us Description":"اشترك الآن بخططنا المختلفة التي تناسب جميع أحجام الأعمال وتمتع بمميزاتنا الرائعة.",
    "Describe your idea":"وصف فكرتك ",
-   "Have a ideas ? let’s Work Together":"هل لديك أفكار؟ شاركها معنا الأن"
+   "Have a ideas ? let’s Work Together":"هل لديك أفكار؟ شاركها معنا الأن",
+   "Error":"خطأ"
 
   
 
