--- a/lang/en.json
+++ b/lang/en.json
@@ -1436,7 +1436,8 @@
 "Designed by":"Designed by",
 "Save Plan":"Save",
 "Choose your payment method to subscribe":"Choose your payment method to subscribe :",
-"Contact us Description":"Subscribe now with our different plans that suits all business sizes and enjoy our amazing features ."
+"Contact us Description":"Subscribe now with our different plans that suits all business sizes and enjoy our amazing features .",
+"Error":"Error"
 
   
 }
