--- a/lang/ar.json
+++ b/lang/ar.json
@@ -133,7 +133,7 @@
   "faq_description": "End-to-end payments and financial management in a single solution. Meet the right platform to help realize.",
   "Home": "Home",
   "About us": "عنا",
-  "About Company": "About Company",
+  "About Company": "عن شركتنا",
   "Do you have more questions?": "Do you have more questions?",
   "Shoot a Direct Mail": "Shoot a Direct Mail",
   "Contact us": "اتصل بنا",
@@ -197,7 +197,7 @@
   "URL": "URL",
   "Over 12 years of experience in the IT Industry & Tech service": "Over 12 years of experience in the IT Industry & Tech service",
   "Enter Your Database Password": "Enter Your Database Password",
-  "About Us": "About Us",
+  "About Us": "عنا",
   "Enter Your Database Username": "Enter Your Database Username",
   "Text": "Text",
   "Enter Your Database Name": "Enter Your Database Name",
@@ -1148,7 +1148,7 @@
   "description": "description",
   "Edit Feature": "Edit Feature",
   "Create Feature": "Create Feature",
-  "Our Features": "Our Features",
+  "Our Features": "مميزاتنا",
   "Create feature": "Create feature",
   "Edit your features post details and necessary information from here": "Edit your features post details and necessary information from here",
   "Edit features post": "Edit features post",
