--- a/lang/en.json
+++ b/lang/en.json
@@ -1384,7 +1384,7 @@
     "Home Title":"Boost your marketing with <br> AVSENDER on WhatsApp !",
     "Home Description":"Reach and engage your target audience more effectively",
     "Feature Title":"Our Features",
-    "Feature Description":"Avsender is an efficient and effective way to boost customer support and boost your company's performance.",
+    "Feature Description":"Discover the Power of Our Exciting Features",
     "WhatsApp Chatbot Title":"WhatsApp Chatbot",
     "WhatsApp Chatbot Description":"The WhatsApp bot can work around the clock and can handle multiple requests at once, which means it is always available to help customers, even outside normal business hours.",
     "Lets Create WhatsApp Bot":"Lets Create WhatsApp Bot",
