--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1397,6 +1397,7 @@
   "Feature Title": "المميزات",
   "Feature Description": "يعد Avsender وسيلة فعالة لتعزيز دعم العملاء وأداء شركتك.",
   "WhatsApp Chatbot Title": "الرد الآلي عن طريق الواتساب (Chat bot)",
+  "WhatsApp Chatbot Title Layer": "الرد الآلي عن طريق الواتساب",
   "WhatsApp Chatbot Description": "الرد الالي عبر الواتساب للرد على الرسائل تلقائياً. يقوم بتحليل الرسائل الواردة ويقدم ردوداً مناسب، مما يساعد الشركات في التواصل مع العملاء بشكل سريع وفعال. يُستخدم للإجابة على الأسئلة الشائعة وتقديم المعلومات، مما يسهل عملية الدعم والخدمة.",
   "Lets Create WhatsApp Bot": "يتيح لك إنشاء WhatsApp Bot",
   "AVSender for the WhatsApp ultimate marketing tool !": "AVSender لتطبيق WhatsApp النهائي ,أداة تسويق !",
@@ -1446,7 +1447,7 @@
    "We are here to help you":" نحن هنا لمساعدتك",
    "Unlock Your Brand’s Potential":"إطلاق العنان لإمكانات علامتك التجارية",
    "ALL RIGHTS RESERVED":"جميع الحقوق محفوظة",
-   "Designed by":"صمم بواسطة",
+   "Designed by":"صمم بواسطة Ⓒ",
    "Save Plan":"وفر",
    "Choose your payment method to subscribe":"اختر طريقة الدفع :",
    "Contact us Description":"اشترك الآن بخططنا المختلفة التي تناسب جميع أحجام الأعمال وتمتع بمميزاتنا الرائعة.",
