--- a/lang/en.json
+++ b/lang/en.json
@@ -1386,6 +1386,7 @@
     "Feature Title":"Our Features",
     "Feature Description":"Discover the Power of Our Exciting Features",
     "WhatsApp Chatbot Title":"WhatsApp Chatbot",
+    "WhatsApp Chatbot Title Layer":"WhatsApp Chatbot",
     "WhatsApp Chatbot Description":"The WhatsApp bot can work around the clock and can handle multiple requests at once, which means it is always available to help customers, even outside normal business hours.",
     "Lets Create WhatsApp Bot":"Lets Create WhatsApp Bot",
     "AVSender for the WhatsApp ultimate marketing tool !":"AVSender for the WhatsApp ultimate marketing tool !",
@@ -1433,7 +1434,7 @@
 "We are here to help you":"We are here to help you",
 "Unlock Your Brand’s Potential":"Unlock Your Brand’s Potential",
 "ALL RIGHTS RESERVED":"ALL RIGHTS RESERVED",
-"Designed by":"Designed by",
+"Designed by":"ⒸDesigned by",
 "Save Plan":"Save",
 "Choose your payment method to subscribe":"Choose your payment method to subscribe :",
 "Contact us Description":"Subscribe now with our different plans that suits all business sizes and enjoy our amazing features .",
