--- a/lang/en.json
+++ b/lang/en.json
@@ -1450,7 +1450,8 @@
 "schedule_message" : "Schedule message",
 "access_chat_list" : "Access chat list",
 "access_group_list" : "Access group list",
-"unlimited" : "unlimited"
+"unlimited" : "unlimited",
+"Accept For":"Accept For"
 
   
 }
