--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1465,7 +1465,8 @@
 "schedule_message" : "رسائل مجدولة",
 "access_chat_list" : "مدخل الى قائمة الدردشة",
 "access_group_list" : "مدخل الى قائمة المجموعة",
-"unlimited" : "غير محدود"
+"unlimited" : "غير محدود",
+"Accept For":"Accept For"
 
   
 
