--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1466,7 +1466,7 @@
 "access_chat_list" : "مدخل الى قائمة الدردشة",
 "access_group_list" : "مدخل الى قائمة المجموعة",
 "unlimited" : "غير محدود",
-"Accept For":"Accept For"
+"Accept For":"يتاح الدفع بواسطة وسائل الدفع التالية"
 
   
 
