--- a/lang/en.json
+++ b/lang/en.json
@@ -1451,7 +1451,7 @@
 "access_chat_list" : "Access chat list",
 "access_group_list" : "Access group list",
 "unlimited" : "unlimited",
-"Accept For":"Accept For"
+"Accept For":"Payment is available using the following payment methods "
 
   
 }
