--- a/lang/ar.json
+++ b/lang/ar.json
@@ -130,12 +130,12 @@
   "validation.uuid": "The :attribute field must be a valid UUID.",
   "validation.custom.attribute-name.rule-name": "custom-message",
   "Dashboard": "Dashboard",
-  "faq_description": "End-to-end payments and financial management in a single solution. Meet the right platform to help realize.",
+  "faq_description": "حل شامل لإدارة المدفوعات والشؤون المالية في منصة واحدة. اكتشف المنصة المناسبة لتحقيق أهدافك",
   "Home": "Home",
   "About us": "عنا",
   "About Company": "عن شركتنا",
-  "Do you have more questions?": "Do you have more questions?",
-  "Shoot a Direct Mail": "Shoot a Direct Mail",
+  "Do you have more questions?": "هل لديك أي أسئلة ؟",
+  "Shoot a Direct Mail": "أرسل بريدًا مباشرًا",
   "Contact us": "اتصل بنا",
   "Visit Us Daily": "Visit Us Daily",
   "Email Us": "Email Us",
@@ -1309,6 +1309,7 @@
   "Search Here": "Search Here",
   "Oops there is no blog post available": "Oops there is no blog post available",
   "READ MORE": "قراءة المزيد",
+  
   "Blog": "المدونة",
   "Recent Blogs": "Recent Blogs",
   "Recent Post": "Recent Post",
